Small changes for theme switching
Added a change in the image, fixed bug where about me facts do not change

--- a/opposites-attract/src/about-me.html
+++ b/opposites-attract/src/about-me.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="container" id="info-card">
             <div class="container" id="info-card-left">
-                <img id="profile" src="oversized-cat.jpg">
+                <img id="profile" src="cat.jpg">
             </div>
             <div class="container" id="info-card-right">
                 <li id="list-about-me">
