--- a/opposites-attract/src/index.html
+++ b/opposites-attract/src/index.html
@@ -25,7 +25,7 @@
         
         <div class="container" id="info-card">
             <div class="container" id="info-card-left">
-                <img id="profile" src="oversized-cat.jpg">
+                <img id="profile" src="cat.jpg">
             </div>
             <div class="container" id="info-card-right">
                 <p>Hi, I'm Zak</p>
