--- a/opposites-attract/src/about-me.html
+++ b/opposites-attract/src/about-me.html
@@ -30,8 +30,8 @@
                     <ul id="dark">I like staying up late</ul>
                     <ul id="dark">I can be lazy sometimes</ul>
                     <ul id="dark">I like to play video games</ul>
-                    <ul id="light" hidden>But like waking up before the sunrise</ul>
-                    <ul id="light" hidden>But I enjoy working on interesting tasks</ul>
+                    <ul id="light" hidden>I like waking up before the sunrise</ul>
+                    <ul id="light" hidden> I enjoy working on interesting tasks</ul>
                     <ul id="light" hidden>I like to go skiing </ul>
                 </li>
             </div>
