Updated link to social media
LinkedIn link updated

--- a/opposites-attract/src/about-me.html
+++ b/opposites-attract/src/about-me.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="footer">
             <nav>
-                <a href="https://www.linkedin.com/in/zak-g-372911272"><img id="social-logo" src="InBug-Black.png"></a>
+                <a href="https://www.linkedin.com/in/zakary-g-372911272/"><img id="social-logo" src="InBug-Black.png"></a>
                 <a href="https://github.com/ZakGiles"><img id="social-logo" src="github-mark.png"></a>
             </nav>
         </div> 
