--- a/opposites-attract/src/index.html
+++ b/opposites-attract/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
     <link id="css" rel="stylesheet" href="dark.css">
+    <link rel="stylesheet" href="animations.css">
     <title>Zak Giles</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
                 <img id="profile" src="cat.jpg">
             </div>
             <div class="container" id="info-card-right">
-                <p>Hi, I'm Zak</p>
+                <p>Hi, i'm Zak</p>
             </div>
         </div>
     </div>
