--- a/opposites-attract/src/about-me.html
+++ b/opposites-attract/src/about-me.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
     <link id="css" rel="stylesheet" href="dark.css">
+    <link rel="stylesheet" href="animations.css">
     <title>Zak Giles</title>
 </head>
 <body>
