minor css changes

--- a/opposites-attract/src/index.html
+++ b/opposites-attract/src/index.html
@@ -27,6 +27,7 @@
         <div class="container" id="info-card">
             <div class="container" id="info-card-left">
                 <img id="profile" src="cat.jpg">
+                <span class="tooltip">This is my cat — Kiki</span>
             </div>
             <div class="container" id="info-card-right">
                 <p>Hi, i'm Zak</p>
